<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_Convert_UINT16" Id="{df86a249-9592-4528-89fe-abf699cc00b4}">
    <Declaration><![CDATA[TYPE U_Convert_UINT16 :
UNION
	nValue		:UINT;
	arrByte		:ARRAY[1..2] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>