<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FUN_ConvTwoByteToUInt16" Id="{5ab60014-e1ed-46e7-8fbe-7091f4aa4cb9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION FUN_ConvTwoByteToUInt16 : UINT
VAR_INPUT
	nValue1		:BYTE;				// Input Byte no 1
	nValue2		:BYTE;				// Input Byte no 2
END_VAR
VAR
	uData		:U_Convert_UINT16;		// Data variable used for conversion
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// Save input bytes in data union
uData.arrByte[1] := nValue1;
uData.arrByte[2] := nValue2;

// Return value
FUN_ConvTwoByteToUInt16 := uData.nValue;]]></ST>
    </Implementation>
    <LineIds Name="FUN_ConvTwoByteToUInt16">
      <LineId Id="39" Count="5" />
      <LineId Id="16" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>